--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.3.1
   carousel_slider: ^4.0.0
+  circular_profile_avatar: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
